Some more changes.

--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -42,11 +42,18 @@
 
 
 
-    <h1 style="color:rgb(255, 196, 32)">Data</h1>
-    <p style="color:rgb(255, 196, 32)">On this page, you can view tables that were used to analyze the study.</p>
+    <h1
+    style="background-color:rgb(255, 196, 32);
+    color:rgb(145, 0, 19);
+    text-align:center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">Data</h1>
+    <p 
+    style="color:rgb(255, 196, 32);
+    text-align:center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">On this page, you can view tables that were used to analyze the study.</p>
     <br/>
     <div class="table-responsive">
-        <table border="2" class="dataframe" style="color:rgb(255, 196, 32); border-color:mintcream">
+        <table border="2" class="dataframe" style="color:rgb(255, 196, 32); border-color:mintcream;">
             <thead>
               <tr style="text-align: center;">
                 <th>City_ID</th>
