--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -40,8 +40,17 @@
 
     </nav>
 
-    <h1 style="color:rgb(255, 196, 32)">Comparisons</h1>
-    <p style="color:rgb(255, 196, 32)">Here, you may compare the four graphs to each other. Click an image to get a more in-depth analysis.</p>
+    <h1 
+    style="background-color:rgb(255, 196, 32);
+    color:rgb(145, 0, 19);
+    text-align:center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+    Comparisons</h1>
+    <p 
+    style="color:rgb(255, 196, 32);
+    text-align:center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+    Here, you may compare the four graphs to each other. Click an image to get a more in-depth analysis.</p>
     <br/>
     <div class="container">
         <div class="row">
