--- a/WebVisualizations/lat_vs_humidity.html
+++ b/WebVisualizations/lat_vs_humidity.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 
-<body>
+<body style="background-color:rgb(110, 3, 17)">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Weather Anaylsis Site</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,13 +38,31 @@
 
 
     </nav>
-    <h1>Figure 2: Latitude vs. Humidity</h1>
+    <h1
+    style="background-color:rgb(255, 196, 32);
+    color:rgb(145, 0, 19);
+    text-align:center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+    Figure 2: Latitude vs. Humidity</h1>
     <br/>
-    <img
-        src="visualizations/Fig2.png"
-        alt="City Latitude vs. Humidity">
-    </img>
-    <p>This scatterplot implies there is no significant correlation whatsoever between city latitude and humidity, as the overall humidity percentages do not skew higher and lower depending on the latitude.</p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+                <img
+                src="visualizations/Fig2.png"
+                alt="City Latitude vs. Humidity">
+                </img>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                <p
+                style="color:rgb(255, 196, 32);
+                text-align:left;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+                This scatter plot gauges the relationship between the recorded humidity of each city and that city's latitude. The statistics here imply there is no significant correlation whatsoever between city latitude and humidity, as the overall humidity percentages do not skew higher and lower depending on the latitude.</p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
