--- a/WebVisualizations/lat_vs_max_temp.html
+++ b/WebVisualizations/lat_vs_max_temp.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 
-<body>
+<body style="background-color:rgb(110, 3, 17)">
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Weather Anaylsis Site</a>
@@ -39,13 +39,30 @@
 
 
     </nav>
-    <h1>Figure 1: Latitude vs. Max Temperature</h1>
+    <h1
+    style="background-color:rgb(255, 196, 32);
+    color:rgb(145, 0, 19);
+    text-align:center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+    Figure 1: Latitude vs. Max Temperature</h1>
     <br/>
-    <img
-    src="visualizations/Fig1.png"
-    alt="City Latitude vs. Max Temperature">
-    </img>
-    <p>According to this scatter plot, cities with latitude well above 0 tend to have far lower max temperature than those near or below 0. Cities with negative latitudes only have marginally lower max temperatures than those aroudn 0.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+                <img
+                src="visualizations/Fig1.png"
+                alt="City Latitude vs. Max Temperature">
+                </img>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                <p
+                style="color:rgb(255, 196, 32);
+                text-align:left;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+                This scatter plot plots the relation between the maximum temperature recorded in each city versus that city's latitude. It is the only one featured here that appears to trace a significant pattern. According to the chart, cities with latitude well above 0 tend to have far lower max temperature than those near or below 0. Cities with negative latitudes only have marginally lower max temperatures than those around 0.</p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
