--- a/WebVisualizations/lat_vs_wind_speed.html
+++ b/WebVisualizations/lat_vs_wind_speed.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
 </head>
 
-<body>
+<body style="background-color:rgb(110, 3, 17)">
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="index.html">Weather Anaylsis Site</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -38,13 +38,31 @@
 
 
     </nav>
-    <h1>Figure 4: Latitude vs. Wind Speed</h1>
+    <h1
+    style="background-color:rgb(255, 196, 32);
+    color:rgb(145, 0, 19);
+    text-align:center;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+    Figure 4: Latitude vs. Wind Speed</h1>
     <br/>
-    <img
-        src="visualizations/Fig4.png"
-        alt="City Latitude vs. Cloudiness">
-    </img>
-    <p>This scatterplot tracks the average wind speed of each city sampled against its latitude. Although there appears to be a vague positive correlation between cities far from latitude 0 and average wind speed, the relation does not appear to be statistically significant enough that we can conclude much from it.</p>
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+                <img
+                src="visualizations/Fig2.png"
+                alt="City Latitude vs. Wind Speed">
+                </img>
+            </div>
+            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+                <p
+                style="color:rgb(255, 196, 32);
+                text-align:left;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+                This scatter plot tracks the average wind speed of each city sampled against its latitude. Although there appears to be a vague positive correlation between cities far from latitude 0 and average wind speed, the relation does not appear to be statistically significant enough that we can conclude much from it.</p>
+            </div>
+        </div>
+    </div>
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
