--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -46,32 +46,47 @@
         font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
         Welcome!
     </h1>
-    <p 
-    style="color:rgb(255, 196, 32);
-    text-align:center;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
-    Here, you will find a basic overview of the study in which we analyzed the patterns surrounding city latitude and weather.</p>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <p 
+                style="color:rgb(255, 196, 32);
+                text-align:center;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+                Here, you will find a basic overview of the study in which we analyzed the patterns surrounding city latitude and weather. The study was built by sampling over 500 cities from around the world and then calculating their max temperature, humidity, cloudiness, and wind speed, in addition to their latitude. From there, charts were built to analyze the relationship between the weather variables and latitude.</p>
+                <p 
+                style="color:rgb(255, 196, 32);
+                text-align:center;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+                As a whole, this study found that aside from max temperature, latitude isn't a good indicator of what type of weather you can expect from a city based on its latitude in relation to the equator.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                <ul>
+                    <li
+                        style="color:rgb(255, 196, 32);
+                        font-size:x-large;
+                        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+                        <a href="comparisons.html">Comparisons</a>
+                    </li>
+                    <li
+                        style="color:rgb(255, 196, 32);
+                        font-size:x-large;
+                        font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
+                        <a href="data.html">Data</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
     <br/>
-    <ul>
-        <li
-            style="color:rgb(255, 196, 32);
-            font-size:x-large;
-            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
-            <a href="comparisons.html">Comparisons</a>
-        </li>
-        <li
-            style="color:rgb(255, 196, 32);
-            font-size:x-large;
-            font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif">
-            <a href="data.html">Data</a>
-        </li>
-    </ul>
-    <br/>
+
     <h2
-        style="text-align: center;
-        color:rgb(145, 0, 19);
-        background-color:rgb(255, 196, 32)">
-        Visualizations
+    style="text-align: center;
+    color:rgb(145, 0, 19);
+    background-color:rgb(255, 196, 32)">
+    Visualizations
     </h2>
     <div class="container">
         <div class="row">
