--- a/WebVisualizations/lat_vs_humidity.html
+++ b/WebVisualizations/lat_vs_humidity.html
@@ -48,13 +48,13 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-xs-12 col-sm-12 col-md-9 col-lg-9">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-9">
                 <img
                 src="visualizations/Fig2.png"
                 alt="City Latitude vs. Humidity">
                 </img>
             </div>
-            <div class="col-xs-12 col-sm-12 col-md-3 col-lg-3">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 col-xl-3">
                 <p
                 style="color:rgb(255, 196, 32);
                 text-align:left;
