--- a/WebVisualizations/index.html
+++ b/WebVisualizations/index.html
@@ -91,6 +91,11 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h3
+                    style="color:rgb(255, 196, 32);
+                    font-size:medium;
+                    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                    Vs. Max Temperature</h3>
                 <a href="lat_vs_max_temp.html"><img
                 src="visualizations/Fig1.png"
                 alt="City Latitude vs. Max Temperature"
@@ -98,6 +103,11 @@
                 width=200></img></a>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h4
+                style="color:rgb(255, 196, 32);
+                font-size:medium;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                Vs. Humidity</h4>
                 <a href="lat_vs_humidity.html"><img
                     src="visualizations/Fig2.png"
                     alt="City Latitude vs. Humidity"
@@ -105,6 +115,11 @@
                     width=200></img></a>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h5
+                style="color:rgb(255, 196, 32);
+                font-size:medium;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                Vs. Cloudiness</h5>
                 <a href="lat_vs_cloudiness.html"><img
                     src="visualizations/Fig3.png"
                     alt="City Latitude vs. Cloudiness"
@@ -112,6 +127,11 @@
                     width=200></img></a>
             </div>
             <div class="col-xs-3 col-sm-3 col-md-3 col-lg-3">
+                <h6
+                style="color:rgb(255, 196, 32);
+                font-size:medium;
+                font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;">
+                Vs. Wind Speed</h6>
                 <a href="lat_vs_wind_speed.html"><img
                     src="visualizations/Fig4.png"
                     alt="City Latitude vs. Wind Speed"
